--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="css/default.css">
+    <title>Cipher Sapphireとは！？</title>
+  </head>
+  <body>
+    <header>
+      <h1></h1>
+    </header>
+    <section>
+      <h1></h1>
+    </section>
+    <aside>
+      <h1></h1>
+    </aside>
+    <footer>
+      <h1></h1>
+    </footer>
+  </body>
+</html>
