--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   </head>
   <body>
     <header>
-      <h1></h1>
+      <h1>Header</h1>
     </header>
     <section>
-      <h1></h1>
+      <h1>Section</h1>
     </section>
     <aside>
-      <h1></h1>
+      <h1>Aside</h1>
     </aside>
     <footer>
-      <h1></h1>
+      <h1>Footer</h1>
     </footer>
   </body>
 </html>
