--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <section>
       <h1>Section</h1>
     </section>
-    <aside>
-      <h1>Aside</h1>
-    </aside>
+    <div id="side">
+      <aside>
+        <h1>Aside</h1>
+      </aside>
+    </div>
     <footer>
       <h1>Footer</h1>
     </footer>
