--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
       <h1>Header</h1>
     </header>
+  <div id="main">
     <section>
       <h1>Section</h1>
     </section>
@@ -17,6 +18,7 @@
         <h1>Aside</h1>
       </aside>
     </div>
+  </div>
     <footer>
       <h1>Footer</h1>
     </footer>
