--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     </section>
     <div id="side">
       <aside>
-        <h1>Aside</h1>
+        <h1>Aside1</h1>
+      </aside>
+      <aside>
+        <h1>Aside2</h1>
       </aside>
     </div>
   </div>
