--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/default.css">
-    <title>Cipher Sapphireとは！？</title>
+    <title>各種デバイス対応練習用</title>
   </head>
   <body>
     <header>
